# starklings-backend

./: Cargo.toml  README.md  course.toml
.git_hooks/: pre-commit
.github/workflows/: CI.yaml
api/: Cargo.toml
minter/: Cargo.toml
only-dust-contracts-api/: Cargo.toml
only-dust-contracts-api/src/: config.rs  lib.rs  only_dust_config.rs
only-dust-contracts-api/src/application/: mod.rs
only-dust-contracts-api/src/domain/: errors.rs  traits.rs  types.rs
only-dust-contracts-api/src/infrastructure/: mod.rs  onlydust_chain_config.rs
rand_felt/: Cargo.toml
rand_felt/src/: main.rs
scripts/: install_git_hooks.sh  setup.sh
starklings-certification-minter-service/: Cargo.toml
starklings-certification-minter-service/src/: course_config.rs  main.rs
starklings-certification-minter-service/src/application/: mod.rs
starklings-certification-minter-service/src/domain/: errors.rs  traits.rs
starklings-certification-minter-service/src/infrastructure/: course_config.rs  mod.rs  octocrab_implem.rs
starklings-certification-minter-service/src/routes/: mod.rs  state_reader.rs  submit_exercise.rs
